--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@
  body::-webkit-scrollbar{
   display:none;
  }
- .nav-design{
+ /* .navigation{
    margin-bottom:0px !important;
- }
+ } */
  .logo{
   color:#fff !important;
   font-size:20px;
@@ -166,8 +166,50 @@ footer span {
 footer span:hover {
   background-color: rgb(9, 224, 196);
 }
-@media only screen and(max-width:600px){
+@media only screen and (max-width:600px){
+  body{
+    background-color:#221D26;
+  }
   .text h1{
-    font-size:40px;
+    font-size:35px;
+    padding:20%;
+  }
+  .video-part{
+    width:100%;
+    height:100px;
+    align-items: center;
+  }
+  .img{
+    float:left;
+    size-adjust: 300px;
+    display: none;
+  }
+  .box1{
+    width:100%;
+    height:300px;
+  }
+  .box1 h3{
+    position: relative;
+    top:30%;
+  }
+  .box2{
+    width:100%;
+    height:300px;
+  }
+  .box2 h3{
+    position: relative;
+    top:45%;
+  }
+  .two-person{   
+    width:100%;
+    margin:0 auto;  
+  }
+  .two-person p{
+    padding-bottom:10px;
+  }
+}
+@media only screen and (max-width:300px){
+  body{
+    background-color:#221D26;
   }
 }
